- Mod: bin/sync-version.php JSON encoding without unicode escaping. (#89)


1.5.0
-----
2022-06-03

- Add: Separate composer.json in /bin dir. (#83)
- Add: nbpc_react_refresh_runtime() function. (#86)
- Add: Rest route register, and reg. (#87)
- Mod: Exclude .lock files (#81)


1.4.3
-----
2022-05-20

- Add: Static method NBPC_Reg_Script::wp_script() for scripts created by wp-scripts. (#73)
- Add: .gitignore items. (#75, #77)
- Add: default webpack.config.js.
- Add: remove:hot-update script.
- Mod: Lower priority of loading text domains. (#72)
- Mod: nbpc(), and NBPC_Main_Base::get_instance() return type hint. (#74)
- Mod: Remove heredoc section of class-nbpc-front-fallback.php. (#79)


1.4.2
-----
2022-05-20

- Mod: The 1st argument of bin/sync-version.php becomes optional. Main path is automatically found.
- Mod: bin/sync-version.php handles CPBN version string when the boilerplate code is not prefix changed.
- Mod: bin/prefix-change.php also finds style.css and root-level .php files automatically.


1.4.1
-----
2022-05-19

- Fix: Correct unrelated strings. (Issue #69)
- Mod: Module loading is distinguished. (Issue #68)
       * Early modules are loaded as soon as plugin (or theme) is loaded.
       * Late modules are loaded in init action callback.
- Mod: prefix-change.php can additionally replace text domain strings.
- Fix: Minor string correction.


1.4.0
-----
2022-04-21

- Add: NBPC_HTML kses helper methods.
- Fix: NBPC_HTML methods now do not support echo outputs.
- Fix: NBPC_Submodule_Impl:touch()'s visibility changes from protected to public.


1.4.0-beta.2
------------
2022-04-20

- Add: Front fallback module.
- Fix: Better front module setup process.
- Fix: Template_Impl::render() cannot find template file when used for themes. (Issue #66)
- Fix: Force update 'autoload=no' options won't work for newly added options. (Issue #67)


1.4.0-beta.1
------------
2022-03-18

- Add: Theme support.
- Add: Dynamic loading of admin modules.


1.3.4
-----
2022-03-15