@@ -1,4 +1,5 @@
 - Mod: bin/sync-version.php JSON encoding without unicode escaping. (#89)
+- Mod: fix error of webpack.config.js. (#90)
 
 
 1.5.0
